Rewrote hyperlink explanatory text, links, and headers in index page and history page for improved clarity and consistency.

--- a/history.html
+++ b/history.html
@@ -98,7 +98,7 @@
                 experience.</p>
               <p class="shaking">
                 <a style="text-decoration: none; color: var(--color-primary); cursor: cell;" href="./index.html"
-                  rel="noopener noreferrer">Click me</a>
+                  rel="noopener noreferrer">Click Here</a>
               </p>
             </li>
             <li>Multimedia and Reactivity - The widespread use of JavaScript enabled hyperlinks to trigger complex
@@ -123,13 +123,13 @@
             <li>Knowledge Organization - In education and academic research, hyperlinks are used to connect relevant
               concepts and reference materials, facilitating the organization and dissemination of knowledge.
               <p>
-                <a style="color: var(--color-primary);" href="https://en.m.wikipedia.org/wiki" rel="noopener noreferrer">wikipedia</a>
+                <a style="color: var(--color-primary);" href="https://en.m.wikipedia.org/wiki" rel="noopener noreferrer">Wikipedia</a>
               </p>
             </li>
             <li>Online Navigation - Hyperlinks serve as navigation tools, helping users quickly jump between websites
               and pages, improving the efficiency of information retrieval.
               <p>
-                <a style="color: var(--color-primary);" href="./index.html" rel="noopener noreferrer">To index</a>
+                <a style="color: var(--color-primary);" href="./index.html" rel="noopener noreferrer">To Navigation Bar</a>
 
               </p>
             </li>
