--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="document-toc-container">
         <section class="document-toc">
           <header>
-            <h2 class="document-toc-heading">Anchors nav</h2>
+            <h2 class="document-toc-heading">Anchors Nav</h2>
           </header>
           <ul class="document-toc-list">
             <li class="document-toc-item"><a class="document-toc-link" href="#overview" aria-current="true">Overview</a>
@@ -33,7 +33,7 @@
     </aside>
     <main>
       <header>
-        <h1>Exploring Hyperlinks in Web Development</h1>
+        <h1>Exploring Hyperlinks</h1>
       </header>
       <section aria-labelledby="overview">
         <use-card>
@@ -68,7 +68,7 @@
               </p>
               </ol>
               <div class="notecard note">
-                <p><h4>Note on Hyperlink Implementations:</h4></p>
+              <p><h3>Note on Hyperlink Implementations:</h3></p>
                 <ul>
                   <li>
                   Traditional hyperlinks are constrained to GET requests, such as when a user clicks a link to download a document. 
@@ -120,11 +120,11 @@
                     </p>
                     <pre>
 <code>
-  &lt;a href="/index.html?name=A"&gt;"Go ahead and give it a try."&lt;/a&gt;
+  &lt;a href="/index.html?name=A"&gt;"Try it out"&lt;/a&gt;
 </code>
                   </pre>
                     <div>
-                      <a href="/index.html?name=A">"Go ahead and give it a try."</a>
+                      <a href="/index.html?name=A">"Try it out"</a>
                     </div>
                     <p>
                     <br />
@@ -146,7 +146,7 @@
   });
 </code>
                   </pre>
-                    <button onclick="handleClcik()">Go ahead and give it a try</button>
+                    <button onclick="handleClcik()">Try it out</button>
                   </div>
                 </div>
                 </p>
@@ -163,8 +163,8 @@
 
               <p>Links are the breakthrough that made the Web so useful and successful. In the rest of this article, we
                 discuss the various types of links and their importance to modern Web design.</p>
-              <h3>Give it a try to get started</h3>
-              <p class="shaking"><a href="./author.html">Click me</a></p>
+              <h3>Try it out:</h3>
+              <p class="shaking"><a href="./author.html">Click Here</a></p>
             </div>
           </div>
         </use-card>
@@ -176,39 +176,42 @@
             <dl>
               <dt id="internal_link"><a href="#internal_link">Internal link</a></dt>
               <dd>
-                <p>A link between two webpages, where both webpages belong to the same website, is called an internal
-                  link. Without internal links, there's no such thing as a website (unless, of course, it's a one-page
-                  website).</p>
-                <h3>Go ahead and give it a try</h3>
-                <p class="shaking"><a href="./author.html">Click me</a></p>
+                <p>An internal link connects two pages within the same website. Websites, excluding those that consist
+                   of a single page, rely heavily on internal links to function.</p>
+                <h3>Try it out:</h3>
+                <p class="shaking"><a href="./author.html">Click Here</a></p>
+                <br />
               </dd>
               <dt id="external_link"><a href="#external_link">External link</a></dt>
               <dd>
-                <p>A link from your webpage to someone else's webpage. Without external links, there is no Web, since
-                  the
-                  Web is a network of webpages. Use external links to provide information besides the content available
-                  through your webpage.</p>
+                <p>An external link connects a page on your website to a page on another website. The Web is essentially a 
+                  network of such links, which is vital for expanding the information beyond what is available on your own site.</p>
+                <br />
               </dd>
               <dt id="incoming_links"><a href="#incoming_links">Incoming links</a></dt>
               <dd>
-                <p>A link from someone else's webpage to your site. It's the opposite of an external link. Note that you
-                  don't have to link back when someone links to your site.</p>
-                <h3>Go ahead and give it a try</h3>
-                <p class="shaking"><a href="https://github.com/">Click me</a></p>
+                <p>These are links from other websites directing users to your website, essentially the reverse of an
+                   external link. Importantly, you're not required to reciprocate these links.</p>
+                <h3>Try it out:</h3>
+                <p class="shaking"><a href="https://github.com/">Click Here</a></p>
+                <br />
               </dd>
               <dt id="anchors"><a href="#anchors">Anchors</a></dt>
               <dd>
-                <p>Most links tie two webpages together. <strong>Anchors</strong> tie two sections of one document
+                <p>
+                  Unlike typical links that connect separate webpages,  <strong>Anchors</strong> tie two sections of one document
                   together. When you follow a link pointing to an anchor, your browser jumps to another part of the
                   current document instead of loading a new document. However, you make and use anchors the same way as
-                  other links.</p>
+                  other links.
+                </p>
                 <p>
                   <img src="./assets/image/index/link-2.png"
                     alt="Example of a basic display and effect of an anchor in a web page" width="477" height="492"
-                    loading="lazy">
+                    loading="lazy"><br />
+                  Example Usage: Navigate through different sections of a document with ease. Navigate to the overview of hyperlinks section.
                 </p>
-                <h3>Go ahead and give it a try</h3>
-                <p class="shaking"><a href="#overview"># Click me</a></p>
+                <h3>Try it out:</h3>
+                <p class="shaking"><a href="#overview">Click Here</a></p>
               </dd>
             </dl>
 
