Rewrote explanatory text to enhance clarity and readability. Adjusted paragraph order for better logical sequence and connectivity.

--- a/index.html
+++ b/index.html
@@ -152,19 +152,22 @@
                 </p>
               </div>
             </ol>
-              <p>Links stand out from the surrounding text by being underlined and in blue text. Tap or click a link to
-                activate it, or if you use a keyboard, press Tab until the link is in focus and hit Enter or Spacebar.
+              <p>
+                Links are easily distinguishable within text — they are typically underlined and displayed in blue. 
+                To follow a link using a mouse, simply click on it. For keyboard navigation, press the 'Tab' key to 
+                bring the link into focus, then press 'Enter' or 'Spacebar' to activate it.<br />
+                See the example below to observe a link's standard visual presentation within a web page:
               </p>
               <p>
                 <img src="./assets/image/index/link-1.png"
                   alt="Example of a basic display and effect of a link in a web page" width="477" height="492"
                   loading="lazy">
               </p>
-
-              <p>Links are the breakthrough that made the Web so useful and successful. In the rest of this article, we
-                discuss the various types of links and their importance to modern Web design.</p>
               <h3>Try it out:</h3>
               <p class="shaking"><a href="./author.html">Click Here</a></p>
+              <br />
+              <p>This article further explores the diverse types of links and their pivotal role in shaping modern web development
+                 and design, underscoring the profound impact they've had on the Web's utility and success.</p>
             </div>
           </div>
         </use-card>
